Add repo remote update date on card details, fix db config, front details

--- a/config/locales/models/repository/fr.yml
+++ b/config/locales/models/repository/fr.yml
@@ -2,3 +2,5 @@ fr:
   repository:
     description:
       blank: "aucune description"
+    remote_updated_at:
+      label: "Dernière modification"
